fix: logo was too big for the mobile version

--- a/assets/style/responsive_tools.less
+++ b/assets/style/responsive_tools.less
@@ -16,6 +16,10 @@
       .fa-lg;
     }
   }
+  .login-picture {
+    width: 180px;
+    margin: 0 0 3em 0;
+  }
 }
 @media (min-width: @screen-sm-min) {
   .alert-icon {
